--- a/app/listen1_chrome_extension/i18n/zh_CN.json
+++ b/app/listen1_chrome_extension/i18n/zh_CN.json
@@ -54,7 +54,7 @@
     "_RECOVER_FROM_GITHUB_GIST": "从Github Gist导入",
     "_CONNECT_TO_GITHUB": "连接到Github.com",
     "_STATUS": "状态",
-    "_ACRYLIC": "毛玻璃",
+    "_ACRYLIC": "透明",
     "_RECONNECT": "重新连接",
     "_CANCEL_CONNECT": "取消连接",
     "_SHORTCUTS": "快捷键",
@@ -86,5 +86,8 @@
     "_INPUT_NEW_PLAYLIST_TITLE": "输入新歌单名称",
     "_FAIL_OPEN_PLAYLIST_URL": "未能打开输入的歌单地址",
     "_EXAMPLE": "例如",
-    "_COMFIRM": "确认"
+ "_COMFIRM": "确认",
+ "_THEME": "主题",
+ "_THEME_WHITE": "简约白",
+ "_THEME_BLACK": "深空灰"
 }
