--- a/app/listen1_chrome_extension/i18n/fr_FR.json
+++ b/app/listen1_chrome_extension/i18n/fr_FR.json
@@ -10,6 +10,11 @@
  "_PLATFORM_UNION": "Platforms",
  "_PLAYLISTS": "PLAYLISTS",
  "_MY_MUSIC": "Ma Musique",
+ "_CREATED_PLAYLIST": "Ma Playlist",
+ "_FAVORITED_PLAYLIST": "Favorite Playlist",
+ "_REFRESH_PLAYLIST": "Refresh Playlist",
+ "_FAVORITED": "Favorited",
+ "_FAVORITE": "Favorite",
  "_PLAY_ALL": "Lire tout",
  "_ADD_TO_PLAYLIST": "Ajouter à la Playlist",
  "_EDIT": "Editer",
@@ -28,6 +33,8 @@
  "_ARTIST": "Artiste",
  "_ALBUM": "Album",
  "_PLAYLIST_TITLE": "Titre de la Playlist",
+ "_PLAYLIST_AUTHOR": "Playlist Author",
+ "_PLAYLIST_SONG_COUNT": "Playlist Song Count",
  "_PLAYLIST_COVER_IMAGE_URL": "URL de la pochette",
  "_INPUT_PLAYLIST_TITLE": "Inserez le titre de la playlist",
  "_INPUT_PLAYLIST_COVER_IMAGE_URL":  "Entrez l'URL de la pochette",
@@ -58,9 +65,11 @@
  "_CANCEL_CONNECT": "Annuler la connexion",
  "_SHORTCUTS": "Raccourcis",
  "_VIEW_SHORTCUTS_LIST": "Voir la liste des raccourcis",
- "_GLOBAL_SHORTCUTS_NOTICE": "Activer les raccourcis généraux: Ctrl(Cmd) + Alt + Flèche gauche (Morceau précedent)，Ctrl(Cmd) + Alt + Flèche droite (Morceau suivant)",
+ "_GLOBAL_SHORTCUTS_NOTICE": "Activer les raccourcis généraux: Ctrl(Cmd) + Alt + Flèche gauche (Morceau précedent)，Ctrl(Cmd) + Alt + Flèche droite (Morceau suivant)，Ctrl(Cmd) + Alt + Espace (Jouer/Pause)",
  "_LYRIC_DISPLAY": "Affichage des parole",
  "_SHOW_DESKTOP_LYRIC": "Afficher les parole du bureau",
+ "_SHOW_LYRIC_TRANSLATION": "Affiche la traduction des paroles",
+ "_SHOW_DESKTOP_LYRIC_TRANSLATION": "Afficher les traductions de paroles du bureau",
  "_CONNECT_TO_LASTFM": "Ouverture de Last.fm",
  "_ABOUT": "A Propos",
  "_HOMEPAGE": "Accueil",
@@ -74,19 +83,26 @@
  "_SEARCH_PLACEHOLDER": "Rechercher un morceau, un artiste ou un album",
  "_LANGUAGE": "Langage",
  "_ADD_TO_PLAYLIST_SUCCESS": "Succès: Ajouter à la Playlist",
+ "_FAVORITE_PLAYLIST_SUCCESS": "Success: Favorite Playlist",
  "_EDIT_PLAYLIST_SUCCESS": "Succès: Editer la Playlist",
  "_IMPORTING_PLAYLIST": "Importation des playlists...",
  "_IMPORTING_PLAYLIST_SUCCESS": "Succès: Importer les Playlists",
  "_REMOVE_PLAYLIST_SUCCESS": "Succès: Effacer Playlist",
+ "_UNFAVORITE_PLAYLIST_SUCCESS": "Succès: UnFavorite Playlist",
  "_REMOVE_SONG_FROM_PLAYLIST_SUCCESS": "Succès: Retirer la morceau de la Playlist",
  "_ADD_TO_QUEUE_SUCCESS": "Succès: Ajouter à la file de lecture",
  "_COPYRIGHT_ISSUE": "Errur due au copyright, Cherchez sur une autre plateforme",
- "_ADD_TO_PLAYLIST_SUCCESS": "Succès: Ajouter à la playlist",
  "_INPUT_NEW_PLAYLIST_TITLE": "Entrez un nouveau titre de Playlist",
  "_FAIL_OPEN_PLAYLIST_URL": "Erreur ouverture de l'url",
  "_EXAMPLE": "Exemple:",
  "_COMFIRM": "Confirmer",
  "_THEME": "Thème",
  "_THEME_WHITE": "Thème blanc",
- "_THEME_BLACK": "Thème foncé"
+ "_THEME_BLACK": "Thème foncé",
+ "_AUTO_CHOOSE_SOURCE": "Auto Choose Source",
+ "_AUTO_CHOOSE_SOURCE_NOTICE": "If play fail, auto choose source from other music platform.",
+ "_NOWPLAYING_COVER_BACKGROUND": "Now Playing Cover Background",
+ "_NOWPLAYING_COVER_BACKGROUND_NOTICE": "Show Cover Image for Now Playing",
+ "_LOCAL_MUSIC": "Local Music",
+ "_ADD_LOCAL_SONGS": "Add Local Songs"
 }
